# prism

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml
apps/api/: dependencies.py  main.py
apps/trace_cli/: __main__.py
apps/web/: .gitignore  package-lock.json  package.json  playwright.config.ts
contracts/language/: __init__.py  models.py
contracts/learning_ir/: __init__.py  models.py
contracts/sandbox/: __init__.py  models.py
core/execution/: service.py
docs/adr/: ADR-0001-contract-first-modular-architecture.md  ADR-0002-learning-ir-boundary.md  ADR-0003-cpp-trace-profile-v0.1.md  ADR-0004-snapshot-based-timeline-navigation.md
docs/architecture/: sprint-0-architecture.md
docs/sprint-0/: completion-report.md  known-limitations.md  supported-cpp-profile.md  tracing-strategy-evaluation.md
docs/sprint-1/: completion-report.md  known-limitations.md  sprint-1-architecture.md
docs/sprint-2/: README.md  completion-report.md  known-limitations.md  sprint-2-architecture.md
fixtures/cpp/: compilation_failure.cpp  multiple_variables.cpp  runtime_failure.cpp  unsupported_loop.cpp  unsupported_pointer.cpp  variable_arithmetic.cpp  variable_assign.cpp  variable_create.cpp
tests/: test_smoke.py
tests/api/: test_executions.py
tests/contract/: test_contracts.py  test_learning_ir.py  test_profile_validator.py
tests/golden/: multiple_variables.ir.json  variable_arithmetic.ir.json  variable_assign.ir.json  variable_create.ir.json
tests/integration/: test_execution_service.py  test_golden.py  test_sandbox.py  (+1 more)
(+35 files in other folders)
