[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism"
version = "0.1.0"
description = "PRISM - Programming Interactive State Machine"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "apps*",
    "core*",
    "contracts*",
    "adapters*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests requiring external tools (compiler, Docker)",
]

[tool.coverage.run]
source = ["core", "contracts", "adapters", "apps"]
omit = ["tests/*", "fixtures/*"]